--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
 <body>
 
-    <div class="hexagon"></div>
+    <div class="container">
+        <div class="hexagon"></div>
+    </div>
 
 </body>
 
