--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
 
 <body>
 
-    <div class="container">
-        <div class="hexagon"></div>
-    </div>
+    <div class="container"></div>
 
 </body>
 
